--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.11.2",
     "firebase": "^9.15.0",
